--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm run webpack",
     "start": "node server.js",
-    "lite-server": "lite-server",
-    "build": "webpack --watch"
+    "lite-server": "lite-server"
   },
   "repository": {
     "type": "git",
